--- a/style.css
+++ b/style.css
@@ -1,31 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 body { 
-  background-color: rgb(230, 230, 230);
-  text-align: center;
+  background-image: url("image/ananas_2.jpg");
+  text-align: right ;
  }
 
+.container { height: 950px ;
+background-color: black ;
+ }
 
 h1 { color : blue ; 
-background-color: white ;
+
+background-image: url("image/IMG_4333.JPG"); border-radius: 5% ;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
 }
 
 img { .cercle  
     height: 100px ; 
     width: 400px ; 
     background-color: blue;
-    border: 5px solid rgba(0, 0, 0, 1);
+    border: 1px solid rgba(0, 0, 0, 1);
     border-radius: 50%; 
    }
 
-.card-white1 { color : red ;
-  background-color: rgb(230, 230, 230) ;
+.card-white1 { color : blue ;
+  background-color: white ;
  }
 
-.card-white2 { text-align: center ;
+.card-white2 { text-align: justify ;
+  width: 300px ;
+  margin-top: 10px;
  }
+
+ .card-white3 { margin-top: 400px;
+  }
 
 .card-white4 { text-align: center;
+  margin-bottom: 100px ;
 }
 
 p { 
@@ -38,28 +51,30 @@ margin: 30px;
 background: white;                        
 padding: 5px;                             
 border-radius: 50px;                        
-box-shadow: 10px 10px 30px rgba(230,230,230,1);
+box-shadow: 10px 10px 30px black ;
 }
 
    
+.container2 { border-color: black ; 
 
+}
 
 h2 {
   font-size: 30px ;
   color : blue ;
-  background-color: white ;
   text-align: center;
+  background-color: white ;
 }
 
 h3 { 
   font-size: 30px ;
   color : blue ;
   background-color: white ;
-  text-align: justify;
+  text-align: center ;
 } 
 
 ul { 
-font-size: 40px ;
+font-size: 50px ;
 text-align: justify;
  }
 
