--- a/style.css
+++ b/style.css
@@ -17,13 +17,6 @@ background-repeat: no-repeat;
 background-size: cover;
 }
 
-img { .cercle  
-    height: 100px ; 
-    width: 400px ; 
-    background-color: blue;
-    border: 1px solid rgba(0, 0, 0, 1);
-    border-radius: 50%; 
-   }
 
 .card-white1 { color : blue ;
   background-color: white ;
@@ -55,9 +48,6 @@ box-shadow: 10px 10px 30px black ;
 }
 
    
-.container2 { border-color: black ; 
-
-}
 
 h2 {
   font-size: 30px ;
@@ -73,9 +63,19 @@ h3 {
   text-align: center ;
 } 
 
-ul { 
-font-size: 50px ;
+h4 { 
+  font-size: 30px ;
+  color : blue ;
+  background-color: white ;
+  text-align: center ;
+} 
+
+li { 
+font-size: 60px ;
 text-align: justify;
+display: inline ;
+margin: Opx 24px ;
  }
+
 
 
